apps/kubernetes/k3s/apps/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.hughboi.vip`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: hughboi-tls
